<resources>
    <string name="app_name">daras</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label"></string>
    <string name="letter_forms_fragment_label">Letter Forms</string>
    <string name="letter_sounds_fragment_label">Letter Sounds</string>
    <string name="alphabet">Alphabet</string>
    <string name="pronouns">Pronouns</string>
    <string name="present_tense_verbs">Present Tense Verbs</string>
    <string name="past_tense_verbs">Past Tense Verbs</string>
    <string name="pronouns_fragment_label">Pronouns</string>
    <string name="present_tense_verbs_fragment_label">Present Tense Verbs</string>
    <string name="past_tense_verbs_fragment_label">Past Tense Verbs</string>
    <string name="daras">daras</string>
    <string name="multiples_of_ten">Multiples of Ten</string>
    <string name="ordinal_numbers">Ordinal Numbers</string>
    <string name="one_to_twenty">One to Twenty</string>
    <string name="letter_sounds">Letter Sounds</string>
    <string name="letter_forms">Letter Forms</string>
    <string name="numbers">Numbers</string>
    <string name="one_to_twenty_fragment_label">One to Twenty</string>
    <string name="multiples_of_ten_fragment_label">Multiples of Ten</string>
    <string name="ordinal_numbers_fragment_label">Ordinal Numbers</string>
    <string name="personal_pronouns_fragment_label">Personal Pronouns</string>
    <string name="attached_pronouns_fragment_label">Attached Pronouns</string>
    <string name="verb_forms_fragment_label">Verb Forms</string>
    <string name="verb_forms">Verb Forms</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>