<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/daras"
        android:textSize="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_alphabet"
        android:layout_width="348dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:text="@string/alphabet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_pronouns"
        android:layout_width="348dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:text="@string/pronouns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alphabet" />

    <Button
        android:id="@+id/button_present_tense_verbs"
        android:layout_width="348dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:text="@string/present_tense_verbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_pronouns" />

    <Button
        android:id="@+id/button_past_tense_verbs"
        android:layout_width="348dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:text="@string/past_tense_verbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_present_tense_verbs" />

</androidx.constraintlayout.widget.ConstraintLayout>